# CANBusBootloader

./: .project  README.md
Bootloader/: .cproject  .gitignore  .mxproject  Bootloader.cfg  Bootloader.ioc  Bootloader.launch  STM32F407VETX_FLASH.ld  STM32F407VETX_RAM.ld  platformio.ini
Bootloader/Core/Inc/: canbus_bootloader.h  stm32f407x_flash.h
Bootloader/Core/Src/: canbus_bootloader.c  main.c  stm32f407x_flash.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Bootloader/Debug/: Bootloader.elf  Bootloader.list  Bootloader.map  makefile  objects.list
Bootloader/Debug/Core/Src/: canbus_bootloader.d  main.cyclo  main.su  stm32f407x_flash.cyclo  stm32f407x_flash.d  stm32f407x_flash.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_it.su  subdir.mk
Bootloader/Release/: Bootloader.elf  Bootloader.list  Bootloader.map  makefile
Bootloader/Release/Core/Src/: main.cyclo  main.d  main.su  stm32f407x_flash.cyclo  stm32f407x_flash.su  stm32f4xx_hal_msp.su  stm32f4xx_it.cyclo  stm32f4xx_it.su  subdir.mk
BootloaderApp/: .cproject  .mxproject  .project  BootloaderApp.ioc  STM32F407VETX_FLASH.ld  STM32F407VETX_RAM.ld
BootloaderApp/Core/Inc/: main.h  stm32f4xx_hal_conf.h
BootloaderApp/Core/Src/: main.c  stm32f4xx_hal_msp.c
BootloaderApp/Debug/: BootloaderApp.elf  BootloaderApp.list  BootloaderApp.map  makefile  objects.list  sources.mk
BootloaderApp/Debug/Core/Src/: main.cyclo  main.d  (+3 more)
CANArduino/src/: main.cpp  main.cpp.old
Flasher/: package.json  pnpm-lock.yaml
Flasher/src/: App.jsx  styles.css
Flasher/src-tauri/: Cargo.toml  tauri.conf.json
Flasher/src-tauri/src/: main.rs
(+4 files in other folders)
